--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Module 13 - Object-Relational Mapping",
   "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
+  "scripts": {
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bradkuhne/just-tech-news#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.15.1"
